# project-euler

./: .gitignore  .hgignore  .travis.yml  LICENSE  README.md
project-euler/: 1.lisp  1.rb  11.pl  12.lisp  14.lisp  14.pl  15.pl  16.lisp  17.lisp  18.pl  19.lisp  2.lisp  2.pl  2.rb  20.lisp  21.lisp  22.pl  24.lisp  24.pl  25.pl  26.pl  27.pl  28.pl  29.pl  30.pl  31.pl  32.pl  33.pl  34.pl  35.pl  36.pl  37.pl  38.pl  39.pl  4.pl  40.txt  41.pl  42.pl  43.pl  45.lisp  (+31 more)
project-euler/1/: 1.lisp  1.rb
project-euler/10/: 10.hi  10.pl  10_2.pl  10_3.c  10_half.c  10_half.pl  Makefile  benchmark.pl
project-euler/100/: 100.pl  euler-100-50-chance-of-taking-two-blue-discs.pl
project-euler/101/: euler-101-description.txt  euler-101-take2-with-bigrat.pl  euler-101.pl
project-euler/102/: euler-102-description.txt  euler-102-triangles.pl
project-euler/103/: euler-103-description.txt  euler-103.pl
project-euler/104/: euler-104-2.pl  euler-104-description.txt  euler-104.pl
project-euler/105/: euler-105-description.txt  euler-105.pl
project-euler/106/: euler-106-description.txt  euler-106.pl
project-euler/107/: euler-107-description.txt  euler-107.pl
project-euler/108/: euler-108.pl
project-euler/109/: euler-109-description.txt  euler-109.pl
project-euler/11/: 11.pl
project-euler/110/: analyse2.pl  analysis.pl  euler-110-description.txt  euler-110-no-gmp.pl  euler-110.pl
project-euler/111/: euler-111-description.txt  euler-111.pl  gen-10-digit-primes.bash
project-euler/112/: euler-112-description.txt  euler-112.pl
project-euler/113/: euler-113-description.txt  euler-113.pl
project-euler/114/: euler-114-description.txt  euler-114.pl
project-euler/115/: euler-115-description.txt  euler-115.pl
project-euler/116/: euler-116-description.txt  euler-116.pl
project-euler/117/: euler-117-description.txt  euler-117.pl
project-euler/118/: euler-118-description.txt  euler-118.pl
project-euler/119/: euler-119-description.txt  euler-119-take2.pl  euler-119-take3.pl  euler-119.pl
project-euler/12/: 12.lisp
project-euler/120/: euler-120-description.txt  euler-120.pl  euler.hs  test.pl
project-euler/121/: 121-planning.txt  euler-121-description.txt  euler-121.pl
project-euler/122/: 122-planning.txt  euler-122-description.txt  euler-122-take2.pl  euler-122-take3-wrong.pl  euler-122-take4.pl  euler-122-take5.pl  euler-122.pl
project-euler/123/: euler-123-description.txt  euler-123.pl
project-euler/124/: euler-124-description.txt  euler-124.pl
project-euler/125/: euler-125-description.txt  euler-125.pl
project-euler/126/: 126-planning.txt  euler-126-description.txt  euler-126-take2.pl  euler-126-take3.pl  euler-126-take4.pl  euler-126.pl  rejects.pl
project-euler/127/: euler-127-description.txt  euler-127.pl  gen-cache.pl
project-euler/128/: euler-128-description.txt  euler-128.pl
project-euler/129/: euler-129-description.txt  euler-129.pl
project-euler/130/: euler-130-description.txt  euler-130.pl
project-euler/131/: euler-131-description.txt  euler-131.pl
project-euler/132/: 132-2.pl  132-3-description.txt  132-3.pl  132-planning.txt  132.pl  count.sh
project-euler/133/: 133-description.txt  133.pl
project-euler/134/: euler-134-description.txt  euler-134.pl
project-euler/135/: euler-135-description.txt  euler-135.pl
project-euler/136/: euler-136-description.txt  euler-136.pl
project-euler/137/: Makefile  analysis.txt  euler-137-2.pl  euler-137-description.txt  euler-137.pl  html-analysis.html
project-euler/138/: 138-analysis.txt  euler-138-1.pl  euler-138-2.pl  euler-138-3.pl  euler-138-description.txt  euler_138_from_haskell_wiki.hs  modulos-analysis.pl
project-euler/139/: 139-take1.pl  euler-139-description.txt  euler-139-v1.pl
project-euler/14/: 14.lisp  14.pl
project-euler/140/: euler-140-description.txt  euler-140.hs  html-analysis.html  test.pl
project-euler/141/: Makefile  euler-141-1.pl  euler-141-2.cpp  euler-141-2.pl  euler-141-analysis-1.txt  euler-141-analysis-2.pl  euler-141-desc.txt  euler_141_v1.c  euler_141_v2.cpp  process-dump.bash
project-euler/142/: 142.pl  euler-142-analysis.txt  euler-142-description.txt
project-euler/143/: euler-143-analysis-1.txt  euler-143-description.txt  euler-143-v1.pl  euler_143_v2.py
project-euler/144/: euler-144-description.txt  euler-144.hs
project-euler/145/: Makefile  euler-145-description.txt  euler145.c  euler_145_v1.c
project-euler/146/: Makefile  euler-146-analysis-1.pl  euler-146-desc.txt  euler-146-v1.pl  euler_146_v1.c  euler_146_v2.c
project-euler/147/: euler-147-analysis.txt  euler-147-description.txt  euler-147.pl
project-euler/148/: 148-analysis.txt  148.hs  148.pl  Calc.pl  Makefile  Test.bash  calc-num-Y-in-row-ORIG-2.pl  calc-num-Y-in-row-ORIG.pl  calc-num-Y-in-row.pl  euler-148-description.txt  print-row.pl
project-euler/149/: 149-opt1.pl  149.pl  euler-149-description.txt
project-euler/15/: 15.pl
project-euler/150/: Euler150.pm  euler-150-description.txt  euler-150.pl  test.t
project-euler/151/: euler-151-description.txt  euler-151-v1.pl
project-euler/152/: analysis2.txt  euler-152-analysis.txt  euler-152-description.txt  euler-152-take2.pl  euler-152-take3-part2.pl  euler-152-take3.pl  euler-152.pl
project-euler/153/: Driver.bash  Makefile  euler-153-analysis.txt  euler-153-description.txt  euler-153-v1.c  euler-153-v2.pl  euler-153.pl  euler_153_v1.c  gcd-test.pl
project-euler/154/: Makefile  euler-154-description.txt  euler-154.c  euler-154.pl  euler_154_v1.c
project-euler/155/: euler-155-description.txt  euler-155.pl
project-euler/156/: Euler156_V2.pm  euler-156-analysis.txt  euler-156-description.txt  euler-156-test-1.pl  euler-156-v1.pl  euler-156-v2.pl  euler-156-v2.t  euler_156.go
project-euler/157/: euler-157-description.txt  euler-157-v1.pl  euler-157-v2.pl
project-euler/158/: Test.t  brute-force-count.pl  euler-158-description.txt  euler-158-v1.pl  euler_158.hs
project-euler/159/: euler-159-description.txt  euler-159-v1.pl
project-euler/16/: 16.lisp
project-euler/160/: euler-160-analysis.txt  euler-160.pl  (+1 more)
(+845 files in other folders)
